--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.14",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "request": "^2.88.0",
     "winston": "^3.2.1"
   }
