--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
     "start": "node server"
   },
   "dependencies": {
-    "aws-sdk": "^2.693.0",
+    "aws-sdk": "^2.746.0",
     "bcrypt": "^5.0.0",
     "connect-multiparty": "^2.2.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "express-validator": "^6.3.0",
+    "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
-    "jm-ez-l10n": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.14",
+    "moment": "^2.27.0",
+    "mongoose": "^5.10.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "request": "^2.88.0",
-    "winston": "^3.2.1"
-  }
+    "request": "^2.88.2",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {}
 }
