--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server"
   },
   "dependencies": {
-    "aws-sdk": "^2.746.0",
+    "aws-sdk": "^2.747.0",
     "bcrypt": "^5.0.0",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
@@ -17,6 +17,7 @@
     "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongoose": "^5.10.3",
     "morgan": "~1.9.1",
@@ -24,5 +25,7 @@
     "request": "^2.88.2",
     "winston": "^3.3.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
