--- a/example.env
+++ b/example.env
@@ -4,9 +4,9 @@ NAME = Flex-Backend
 # DATABASE
 DATABASE_URL = localhost
 DATABASE_PORT = 27017
-DATABASE = 
-DBUSER = 
-DBPASSWORD = 
+DATABASE = mydb 
+DBUSER = admin
+DBPASSWORD = admin@123
 
 # API
 PORT = 3000
@@ -33,3 +33,4 @@ SALT_ROUND = 10
 SHOW_LOG = true
 NODE_ENV = development
 
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
