added prisma auth user

--- a/example.env
+++ b/example.env
@@ -2,7 +2,7 @@
 NAME = Flex-Backend
 
 # DATABASE
-DATABASE_URL = localhost
+DATABASE_HOST = localhost
 DATABASE_PORT = 27017
 DATABASE = mydb 
 DBUSER = admin
@@ -33,4 +33,5 @@ SALT_ROUND = 10
 SHOW_LOG = true
 NODE_ENV = development
 
+# Prisma Database URI
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
