update: typescript integration

--- a/example.env
+++ b/example.env
@@ -1,37 +1,69 @@
-# APP
-NAME = Flex-Backend
+PORT = 5000
 
-# DATABASE
-DATABASE_HOST = localhost
-DATABASE_PORT = 27017
-DATABASE = mydb 
-DBUSER = admin
-DBPASSWORD = admin@123
+## ENVIROMENT CONFIG KEYS FOR ==> "development" || "staging" || "production"
 
-# API
-PORT = 3000
-
-# ENVIRONMENT
-ENV_URL = /dev/api
-
-# JWT
-PRIVATE_KEY = ""
-
-# PAGEINATION
-LIMIT = 10
-PAGE = 1
-
-# AWS
-AWSAccessKeyId = XXXXXXXXXXXXXXXXXXXX
-AWSSecretKey = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-REGION = XX-XXXX-X
-
-# bcrypt
-SALT_ROUND = 10
-
-# LOG
-SHOW_LOG = true
+## CURRENT NODE ENVIROMENT
 NODE_ENV = development
 
-# Prisma Database URI
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+######################## 1. "development" enviroment variables ########################
+// NOTE -> Make sure to prefix each key with "DEVELOPMENT_"
+
+#1 TOKENS
+DEVELOPMENT_ACCESS_TOKEN_SECRET = qwertyuiop
+DEVELOPMENT_REFRESH_TOKEN_SECRET = poiuytrewq
+DEVELOPMENT_ADMIN_ACCESS_TOKEN = ADMIN_ACCESS_TOKEN
+DEVELOPMENT_ADMIN_REFRESH_TOKEN = ADMIN_REFRESH_TOKEN
+DEVELOPMENT_ACCESS_EXP = 10d
+DEVELOPMENT_REFRESH_EXP = 30d
+DEVELOPMENT_TOKEN_TYPE = Bearer
+
+#2 DATABASE
+DEVELOPMENT_DB_URL = mongodb://localhost:27017/express-typescript
+
+#3 AWS
+DEVELOPMENT_AWS_FROM_EMAIL = ######################
+DEVELOPMENT_AWS_ACCESS_KEY = ######################
+DEVELOPMENT_AWS_SECRET_KEY = ######################
+DEVELOPMENT_AWS_SES_REGION = us-east-1
+  
+######################## 2. "staging" enviroment variables  ###########################
+// NOTE -> Make sure to prefix each key with "STAGING_"
+
+#1 TOKENS
+STAGING_ACCESS_TOKEN_SECRET = qwertyuiop
+STAGING_REFRESH_TOKEN_SECRET = poiuytrewq
+STAGING_ADMIN_ACCESS_TOKEN = ADMIN_ACCESS_TOKEN
+STAGING_ADMIN_REFRESH_TOKEN = ADMIN_REFRESH_TOKEN
+STAGING_ACCESS_EXP = 10d
+STAGING_REFRESH_EXP = 30d
+STAGING_TOKEN_TYPE = Bearer
+
+#2 DATABASE
+STAGING_DB_URL = mongodb://localhost:27017/express-typescript
+
+#3 AWS
+STAGING_AWS_FROM_EMAIL = #########################
+STAGING_AWS_ACCESS_KEY = #########################
+STAGING_AWS_SECRET_KEY = #########################
+STAGING_AWS_SES_REGION = us-east-1
+
+######################## 2. "production" enviroment variables  ###########################
+// NOTE -> Make sure to prefix each key with "STAGING_"
+
+#1 TOKENS
+PRODUCTION_ACCESS_TOKEN_SECRET = qwertyuiop
+PRODUCTION_REFRESH_TOKEN_SECRET = poiuytrewq
+PRODUCTION_ADMIN_ACCESS_TOKEN = ADMIN_ACCESS_TOKEN
+PRODUCTION_ADMIN_REFRESH_TOKEN = ADMIN_REFRESH_TOKEN
+PRODUCTION_ACCESS_EXP = 10d
+PRODUCTION_REFRESH_EXP = 30d
+PRODUCTION_TOKEN_TYPE = Bearer
+
+#2 DATABASE
+PRODUCTION_DB_URL = mongodb://localhost:27017/express-typescript
+
+#3 AWS
+PRODUCTION_AWS_FROM_EMAIL = #########################
+PRODUCTION_AWS_ACCESS_KEY = #########################
+PRODUCTION_AWS_SECRET_KEY = #########################
+PRODUCTION_AWS_SES_REGION = us-east-1
