--- a/package.json
+++ b/package.json
@@ -1,36 +1,57 @@
 {
-  "name": "express-boilerplate",
-  "version": "0.0.0",
-  "private": true,
+  "name": "express-typescript",
+  "version": "1.0.0",
+  "description": "This README would normally document whatever steps are necessary to get your application up and running.",
+  "main": "server.ts",
   "scripts": {
-    "start": "node server",
-    "postinstall": "npx prisma generate",
-    "db:save": "npx prisma migrate save --experimental",
-    "db:migrate": "npx prisma migrate up --experimental"
+    "postinstall": "typesync",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf ./build && tsc",
+    "dev": "nodemon",
+    "start": "npm run build && node build/server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.7",
+    "@types/helmet": "0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/moment": "^2.13.0",
+    "@types/morgan": "^1.9.1",
+    "@types/node": "^14.0.26",
+    "@types/nodemon": "^1.19.0",
+    "@types/rimraf": "^3.0.0",
+    "@types/socket.io": "^2.1.10",
+    "@types/winston": "^2.4.4",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7",
+    "typesync": "^0.7.0"
   },
   "dependencies": {
-    "@prisma/client": "^2.9.0",
-    "aws-sdk": "^2.747.0",
+    "@types/mongoose": "^5.10.3",
+    "aws-sdk": "^2.852.0",
     "bcrypt": "^5.0.0",
-    "connect-multiparty": "^2.2.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "dayjs": "^1.9.1",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-validator": "^6.6.1",
-    "http-errors": "~1.6.3",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.0",
+    "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "moment": "^2.27.0",
-    "mongoose": "^5.10.5",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.2",
-    "request": "^2.88.2",
+    "mongoose": "^5.11.15",
     "winston": "^3.3.3"
   },
-  "devDependencies": {
-    "@prisma/cli": "^2.9.0",
-    "nodemon": "^2.0.4"
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": true,
+    "tabWidth": 2,
+    "printWidth": 120
   }
 }
