--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "This README would normally document whatever steps are necessary to get your application up and running.",
   "main": "server.ts",
   "scripts": {
-    "postinstall": "typesync",
+    "postinstall": "typesync && husky install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc",
     "dev": "nodemon",
-    "start": "npm run build && node build/server.js"
+    "start": "node build/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,8 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
+    "@types/eslint": "^7.2.6",
+    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/express": "^4.17.7",
     "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "^8.5.0",
@@ -23,12 +25,22 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.26",
     "@types/nodemon": "^1.19.0",
+    "@types/prettier": "^2.2.1",
     "@types/rimraf": "^3.0.0",
     "@types/socket.io": "^2.1.10",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "cors": "^2.8.5",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
