--- a/example.env
+++ b/example.env
@@ -20,6 +20,8 @@ DEVELOPMENT_TOKEN_TYPE = Bearer
 
 #2 DATABASE
 DEVELOPMENT_DB_URL = mongodb://localhost:27017/express-typescript
+# docker-compose use only
+# DEVELOPMENT_DB_URL = mongodb://mongodb:27017/express-typescript
 
 #3 AWS
 DEVELOPMENT_AWS_FROM_EMAIL = ######################
