--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "server.ts",
   "scripts": {
     "postinstall": "typesync",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rimraf ./build && tsc",
     "dev": "nodemon",
-    "start": "npm run build && node build/server.js"
+    "start": "node build/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/helmet": "0.0.47",
+    "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/moment": "^2.13.0",
     "@types/morgan": "^1.9.1",
@@ -27,9 +28,11 @@
     "@types/socket.io": "^2.1.10",
     "@types/winston": "^2.4.4",
     "cors": "^2.8.5",
+    "jest": "^26.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
     "typesync": "^0.7.0"
