--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "test": "jest",
     "build": "rimraf ./build && tsc",
     "dev": "nodemon",
+    "prettier:base": "prettier --parser typescript --single-quote",
+    "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
+    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\"",
     "start": "node build/server.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged",
+      "pre-push": "npm run build"
+    }
   },
   "author": "",
   "license": "ISC",
@@ -37,10 +46,11 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.3.1",
-    "husky": "6.0.0",
+    "husky": "^6.0.0",
     "morgan": "1.10.0",
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
+    "pretty-quick": "^3.1.0",
     "rimraf": "3.0.2",
     "ts-node": "9.1.1",
     "typescript": "4.2.4",
