feat: typeorm integration done

--- a/example.env
+++ b/example.env
@@ -1,13 +1,11 @@
+---------------------- COMMON ----------------------
 PORT = 5000
 GEN_SALT_ROUND = 10
-
-## ENVIROMENT CONFIG KEYS FOR ==> "development" || "staging" || "production"
 
 ## CURRENT NODE ENVIROMENT
 NODE_ENV = development
 
-######################## 1. "development" enviroment variables ########################
-// NOTE -> Make sure to prefix each key with "DEVELOPMENT_"
+----------------------- DEVELOPMENT ---------------------------
 
 #1 TOKENS
 DEVELOPMENT_ACCESS_TOKEN_SECRET = qwertyuiop
@@ -19,18 +17,19 @@ DEVELOPMENT_REFRESH_EXP = 30d
 DEVELOPMENT_TOKEN_TYPE = Bearer
 
 #2 DATABASE
-DEVELOPMENT_DB_URL = mongodb://localhost:27017/express-typescript
-# docker-compose use only
-# DEVELOPMENT_DB_URL = mongodb://mongodb:27017/express-typescript
+DEVELOPMENT_TYPEORM_HOST = localhost
+DEVELOPMENT_TYPEORM_PORT = 5432 
+DEVELOPMENT_TYPEORM_USERNAME = postgres
+DEVELOPMENT_TYPEORM_PASSWORD = toor.321
+DEVELOPMENT_TYPEORM_DATABASE = FlexBackend
 
 #3 AWS
 DEVELOPMENT_AWS_FROM_EMAIL = ######################
 DEVELOPMENT_AWS_ACCESS_KEY = ######################
 DEVELOPMENT_AWS_SECRET_KEY = ######################
 DEVELOPMENT_AWS_SES_REGION = us-east-1
-  
-######################## 2. "staging" enviroment variables  ###########################
-// NOTE -> Make sure to prefix each key with "STAGING_"
+
+-------------------------- STAGING ----------------------------
 
 #1 TOKENS
 STAGING_ACCESS_TOKEN_SECRET = qwertyuiop
@@ -42,16 +41,19 @@ STAGING_REFRESH_EXP = 30d
 STAGING_TOKEN_TYPE = Bearer
 
 #2 DATABASE
-STAGING_DB_URL = mongodb://localhost:27017/express-typescript
+STAGING_TYPEORM_HOST = localhost
+STAGING_TYPEORM_PORT = 5432 
+STAGING_TYPEORM_USERNAME = postgres
+STAGING_TYPEORM_PASSWORD = toor.321
+STAGING_TYPEORM_DATABASE = Bonsai
 
 #3 AWS
-STAGING_AWS_FROM_EMAIL = #########################
-STAGING_AWS_ACCESS_KEY = #########################
-STAGING_AWS_SECRET_KEY = #########################
+STAGING_AWS_FROM_EMAIL = ######################
+STAGING_AWS_ACCESS_KEY = ######################
+STAGING_AWS_SECRET_KEY = ######################
 STAGING_AWS_SES_REGION = us-east-1
 
-######################## 2. "production" enviroment variables  ###########################
-// NOTE -> Make sure to prefix each key with "STAGING_"
+------------------------- PRODUCTION ----------------------------
 
 #1 TOKENS
 PRODUCTION_ACCESS_TOKEN_SECRET = qwertyuiop
@@ -63,10 +65,14 @@ PRODUCTION_REFRESH_EXP = 30d
 PRODUCTION_TOKEN_TYPE = Bearer
 
 #2 DATABASE
-PRODUCTION_DB_URL = mongodb://localhost:27017/express-typescript
+PRODUCTION_TYPEORM_HOST = localhost
+PRODUCTION_TYPEORM_PORT = 5432 
+PRODUCTION_TYPEORM_USERNAME = postgres
+PRODUCTION_TYPEORM_PASSWORD = toor.321
+PRODUCTION_TYPEORM_DATABASE = Bonsai
 
 #3 AWS
-PRODUCTION_AWS_FROM_EMAIL = #########################
-PRODUCTION_AWS_ACCESS_KEY = #########################
-PRODUCTION_AWS_SECRET_KEY = #########################
+PRODUCTION_AWS_FROM_EMAIL = ######################
+PRODUCTION_AWS_ACCESS_KEY = ######################
+PRODUCTION_AWS_SECRET_KEY = ######################
 PRODUCTION_AWS_SES_REGION = us-east-1
