--- a/package.json
+++ b/package.json
@@ -1,69 +1,64 @@
 {
-  "name": "express-typescript",
-  "version": "1.0.0",
-  "description": "This README would normally document whatever steps are necessary to get your application up and running.",
-  "main": "server.ts",
-  "scripts": {
-    "postinstall": "typesync && husky install",
-    "test": "jest",
-    "build": "rimraf ./build && tsc",
-    "dev": "nodemon",
-    "start": "node build/server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/bcrypt": "3.0.0",
-    "@types/cors": "2.8.10",
-    "@types/dotenv": "8.2.0",
-    "@types/eslint": "7.2.7",
-    "@types/eslint-plugin-prettier": "3.1.0",
-    "@types/express": "4.17.11",
-    "@types/helmet": "0.0.47",
-    "@types/jsonwebtoken": "8.5.1",
-    "@types/moment": "2.13.0",
-    "@types/morgan": "1.9.2",
-    "@types/node": "14.14.35",
-    "@types/nodemon": "1.19.0",
-    "@types/prettier": "2.2.3",
-    "@types/rimraf": "3.0.0",
-    "@types/socket.io": "2.1.13",
-    "@types/winston": "2.4.4",
-    "@typescript-eslint/eslint-plugin": "4.18.0",
-    "@typescript-eslint/parser": "4.18.0",
-    "cors": "2.8.5",
-    "eslint": "7.22.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettier": "3.3.1",
-    "husky": "5.1.3",
-    "morgan": "1.10.0",
-    "nodemon": "2.0.7",
-    "prettier": "2.2.1",
-    "rimraf": "3.0.2",
-    "ts-node": "9.1.1",
-    "typescript": "4.2.3",
-    "typesync": "0.8.0"
-  },
-  "dependencies": {
-    "@types/mongoose": "^5.10.3",
-    "aws-sdk": "^2.852.0",
-    "bcrypt": "^5.0.1",
-    "dayjs": "^1.9.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.6.0",
-    "helmet": "^4.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15",
-    "winston": "^3.3.3"
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "useTabs": true,
-    "tabWidth": 2,
-    "printWidth": 120
-  }
+   "name": "express-typescript",
+   "version": "1.0.0",
+   "description": "This README would normally document whatever steps are necessary to get your application up and running.",
+   "main": "server.ts",
+   "scripts": {
+      "postinstall": "typesync && husky install",
+      "test": "jest",
+      "build": "rimraf ./build && tsc",
+      "dev": "nodemon",
+      "start": "ts-node src/index.ts"
+   },
+   "author": "",
+   "license": "ISC",
+   "devDependencies": {
+      "@types/bcrypt": "3.0.0",
+      "@types/cors": "2.8.10",
+      "@types/dotenv": "8.2.0",
+      "@types/eslint": "7.2.7",
+      "@types/eslint-plugin-prettier": "3.1.0",
+      "@types/express": "^4.17.11",
+      "@types/helmet": "0.0.47",
+      "@types/jsonwebtoken": "8.5.1",
+      "@types/moment": "2.13.0",
+      "@types/morgan": "1.9.2",
+      "@types/node": "^8.10.66",
+      "@types/nodemon": "1.19.0",
+      "@types/pg": "^7.14.11",
+      "@types/prettier": "2.2.3",
+      "@types/rimraf": "3.0.0",
+      "@types/socket.io": "2.1.13",
+      "@types/winston": "2.4.4",
+      "@typescript-eslint/eslint-plugin": "^4.22.0",
+      "@typescript-eslint/parser": "^4.22.0",
+      "cors": "2.8.5",
+      "eslint": "7.22.0",
+      "eslint-config-airbnb-base": "14.2.1",
+      "eslint-config-prettier": "8.1.0",
+      "eslint-plugin-import": "2.22.1",
+      "eslint-plugin-prettier": "3.3.1",
+      "husky": "5.1.3",
+      "morgan": "1.10.0",
+      "nodemon": "^2.0.7",
+      "prettier": "2.2.1",
+      "rimraf": "3.0.2",
+      "ts-node": "^9.1.1",
+      "typescript": "^4.2.4",
+      "typesync": "0.8.0"
+   },
+   "dependencies": {
+      "aws-sdk": "^2.852.0",
+      "bcrypt": "^5.0.1",
+      "dayjs": "^1.9.1",
+      "dotenv": "^8.2.0",
+      "express": "^4.17.1",
+      "express-validator": "^6.6.0",
+      "helmet": "^4.0.0",
+      "jsonwebtoken": "^8.5.1",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.32",
+      "winston": "^3.3.3"
+   }
 }
