--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "module": "commonjs",
     "target": "es6",
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
     "incremental": true,
     "skipLibCheck": true,
